fixing color and alignment

--- a/coaching/style.css
+++ b/coaching/style.css
@@ -66,6 +66,7 @@
   padding-top: 50px;
   font-size: 50px;
   color: red;
+  text-align: center;
   visibility: hidden;
 }
 
@@ -73,6 +74,7 @@
   padding-top: 50px;
   font-size: 50px;
   color: red;
+  text-align: center;
   visibility: visible;
 }
 .Ebox {
